--- a/ejs/contacts_santo_tirso.ejs
+++ b/ejs/contacts_santo_tirso.ejs
@@ -53,6 +53,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/mapST.js"></script>
 </body>
 
