--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -75,47 +75,47 @@
                 </div>
                 <div class="box3-wrapper1">
                     <div class="box3 fade-in">
-                        <a href="mca">
+                        <a href="mca.html">
                             <img src="../images/mca.jpg" alt="">
                         </a>
-                        <h3><a href="mca">Dra. Manuela Calado Araújo</a></h3>
+                        <h3><a href="mca.html">Dra. Manuela Calado Araújo</a></h3>
                         <p>Ginecologista/Obstetra</p>
                     </div>
 
                     <div class="box3 fade-in">
-                        <a href="gv">
+                        <a href="gv.html">
                             <img src="../images/gv.jpg" alt="">
                         </a>
-                        <h3><a href="gv">Dra. Gabriela Vasconcellos</a></h3>
+                        <h3><a href="gv.html">Dra. Gabriela Vasconcellos</a></h3>
                         <p>Pediatra/Neonatologista</p>
                     </div>
 
                     <div class="box3 fade-in">
-                        <a href="ac"><img src="../images/profile.png" alt=""></a>
+                        <a href="ac.html"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a href="ac">Dra. Ana Carriço</a>
+                            <a href="ac.html">Dra. Ana Carriço</a>
                         </h3>
                         <p>Cardiologista Pedriátrica</p>
                     </div>
 
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <a href="lc">
+                        <a href="lc.html">
                             <img src="../images/lc.jpg" alt="">
                         </a>
-                        <h3><a href="lc">Dra. Leonilde Coelho</a></h3>
+                        <h3><a href="lc.html">Dra. Leonilde Coelho</a></h3>
                         <p>Endocrinologista</p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <a href="ds"><img src="../images/profile.png" alt=""></a>
+                        <a href="ds.html"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a href="ds">Dra. Dília Soares</a>
+                            <a href="ds.html">Dra. Dília Soares</a>
                         </h3>
                         <p>Nutricionista</p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <a href="mb"><img src="../images/profile.png" alt=""></a>
+                        <a href="mb.html"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a href="mb">Dra. Marta Baltar</a>
+                            <a href="mb.html">Dra. Marta Baltar</a>
                         </h3>
                         <p>Psicóloga/Psicoterapeuta</p>
                     </div>
@@ -201,6 +201,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/scrollDown.js"></script>
 </body>
 
