--- a/ejs/parcials/footer.ejs
+++ b/ejs/parcials/footer.ejs
@@ -12,15 +12,16 @@
         </div>
         <nav>
             <ul>
-                <li class="fade-in"><a href="index">Início</a></li>
-                <li class="fade-in"><a href="specialties">Especialidades</a></li>
-                <li class="fade-in"><a href="agreements">Convenções</a></li>
-                <li class="fade-in"><a href="contacts">Contactos</a></li>
+                <li class="fade-in"><a href="index.html">Início</a></li>
+                <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                <li class="fade-in"><a href="contacts.html">Contactos</a></li>
             </ul>
         </nav>
     </div>
     <div class="privacy-block fade-in">
-        <a href="index">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a href="privacy">Política de
+        <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+            href="privacy.html">Política de
             Privacidade </a><br><a>Design by Francisco Araújo</a>
     </div>
 </footer>
