--- a/ejs/specialties.ejs
+++ b/ejs/specialties.ejs
@@ -42,11 +42,11 @@
             <div class="wrapper5">
                 <div class="box5-wrapper1">
                     <div id="gyne" class="box5">
-                        <a href="mca">
+                        <a href="mca.html">
                             <img class="fade-in" src="../images/gyne.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mca">Ginecologia</a>
+                            <a href="mca.html">Ginecologia</a>
                         </h3>
                         <p class="fade-in">
                             O seguimento ginecológico regular desde a adolescência até a menopausa é essencial na
@@ -71,11 +71,11 @@
                         </ul>
                     </div>
                     <div id="obs" class="box5">
-                        <a href="mca">
+                        <a href="mca.html">
                             <img class="fade-in" src="../images/page3_img2.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mca">Obstetrícia</a>
+                            <a href="mca.html">Obstetrícia</a>
                         </h3>
                         <p class="fade-in">
                             A Obstetrícia faz o acompanhamento desde da pré-concepção ao pós-parto, em situações
@@ -96,11 +96,11 @@
                     </div>
 
                     <div id="ped" class="box5">
-                        <a href="gv">
+                        <a href="gv.html">
                             <img class="fade-in" src="../images/pediatrics.jpg" alt="">
                         </a>
                         <h3 class="h3__inset2 fade-in">
-                            <a href="gv">Pediatria</a>
+                            <a href="gv.html">Pediatria</a>
                             <!-- https://unsplash.com/photos/JcrysJBO8kQ -->
                         </h3>
                         <p class="fade-in">
@@ -124,11 +124,11 @@
                     </div>
 
                     <div id="endo" class="box5">
-                        <a href="lc">
+                        <a href="lc.html">
                             <img class="fade-in" src="../images/endo.jpg" alt="">
                         </a>
                         <h3 class="h3__inset3 fade-in">
-                            <a href="lc">Endocrinologia</a>
+                            <a href="lc.html">Endocrinologia</a>
                             <!-- https://unsplash.com/photos/Nqj2XWHy4K0 -->
                         </h3>
                         <p class="fade-in">A endocrinologia é a especialidade médica que se dedica ao diagnóstico e
@@ -152,11 +152,11 @@
                         </ul>
                     </div>
                     <div id="psy" class="box5">
-                        <a href="mb">
+                        <a href="mb.html">
                             <img class="fade-in" src="../images/psychologist.jpg" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mb">Psicologia</a>
+                            <a href="mb.html">Psicologia</a>
                         </h3>
                         <p class="fade-in">
                             Nesta consulta, destacam-se:<br>
@@ -179,9 +179,9 @@
                     </div>
                     <div id="nut" class="box5">
                         </li>
-                        <a href="ds"><img class="fade-in" src="../images/nutrition.jpg" alt=""></a>
+                        <a href="ds.html"><img class="fade-in" src="../images/nutrition.jpg" alt=""></a>
                         <h3 class="h3__inset2 fade-in">
-                            <a href="ds">Nutrição</a>
+                            <a href="ds.html">Nutrição</a>
                             <!-- https://unsplash.com/photos/QZub8Ni3x_c -->
                         </h3>
                         <p class="fade-in">
@@ -255,6 +255,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/buttonOnSpecialties.js"></script>
 </body>
 
