--- a/ejs/agreements.ejs
+++ b/ejs/agreements.ejs
@@ -227,6 +227,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/buttonOnAgreements.js"></script>
 </body>
 
