--- a/ejs/contacts.ejs
+++ b/ejs/contacts.ejs
@@ -54,6 +54,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/mapPorto.js"></script>
 </body>
 
