--- a/ejs/gallery.ejs
+++ b/ejs/gallery.ejs
@@ -216,6 +216,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/carousel.js"></script>
             <script src="../js/gallery.js"></script>
 </body>
