--- a/ejs/mb.ejs
+++ b/ejs/mb.ejs
@@ -47,13 +47,9 @@
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Segunda-feira:</strong> 9h-14h</li>
-                        <li><strong>Terça-feira:</strong> 9h-20h</li>
-                        <li><strong>Quarta-feira:</strong> 14h-20h</li>
-                        <li><strong>Quinta-feira:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Sexta-feira:</strong> 09h-20h</li>
-                        <li><strong>Sábado:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Domingo:</strong> Encerrado</li>
+                        <li><strong>Terça-feira:</strong> 10h-13h (consulta online)</li>
+                        <li><strong>Quinta-feira:</strong> 16h-20h (consulta online)</li>
+                        <li><strong>Sexta-feira:</strong> 16h-20h (consulta presencial na Clínica do Porto)</li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -117,6 +113,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
 </body>
 
