--- a/ejs/mca.ejs
+++ b/ejs/mca.ejs
@@ -48,13 +48,10 @@
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Segunda-feira:</strong> 9h-14h</li>
-                        <li><strong>Terça-feira:</strong> 9h-20h</li>
-                        <li><strong>Quarta-feira:</strong> 14h-20h</li>
-                        <li><strong>Quinta-feira:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Sexta-feira:</strong> 09h-20h</li>
-                        <li><strong>Sábado:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Domingo:</strong> Encerrado</li>
+                        <li><strong>Segunda-feira:</strong> 14h40-19h (Clínica de S.Tirso)</li>
+                        <li><strong>Terça-feira:</strong> 10h-19h (Clínica do Porto)</li>
+                        <li><strong>Quarta-feira:</strong> 9h-12h40 (Clínica de S.Tirso)</li>
+                        <li><strong>Sexta-feira:</strong> 10h-19h (Clínica do Porto)</li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -111,6 +108,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
 </body>
 
