--- a/ejs/ac.ejs
+++ b/ejs/ac.ejs
@@ -37,7 +37,7 @@
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> medicina fetal e ecocardiografia</p>
+                            <p><strong>Áreas de Diferenciação:</strong> Medicina fetal e Ecocardiografia</p>
                         </div>
                     </div>
                 </div>
@@ -67,19 +67,20 @@
                             <h4>Sociedades Científicas</h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Assistente Hospitalar no Hospital de Vila Nova de Gaia (desde 2008)</li>
-                            <li>Assistente Hospitalar Eventual no Hospital de São João, Porto (2004-2008)</li>
                             <li>Cardiologista pediátrica no Hospital da Luz Arrábida</li>
-                            <li>Internato Complementar no Hospital de São João, Porto (1999-2004)</li>
+                            <li>Desde 2008 - Assistente Hospitalar no Hospital de Vila Nova de Gaia</li>
+                            <li>Desde 2005 - Cardiologista pediátrica na Clínica Gynébe do Porto</li>
+                            <li>2004-2008 - Assistente Hospitalar Eventual no Hospital de São João, Porto</li>
+                            <li>1999-2004 - Internato Complementar no Hospital de São João, Porto</li>
                         </ul>
                         <ul class="text-formation">
-                            <li>Grau de Especialista em Cardiologia Pediátrica (2004)</li>
-                            <li>Licenciatura em Medicina no Instituto de Ciências Biomédicas Abel Salazar, Porto (1996)
+                            <li>2004 - Grau de Especialista em Cardiologia Pediátrica</li>
+                            <li>1996 - Licenciatura em Medicina no Instituto de Ciências Biomédicas Abel Salazar, Porto
                             </li>
                         </ul>
                         <ul class="text-science">
-                            <li>É autora de vários artigos, apresentações e comunicações livres, pertenceu à comissão
-                                organizadora de várias reuniões científicas</li>
+                            <li>É autora de vários artigos, apresentações e comunicações livres.</li>
+                            <li>Pertenceu à comissão organizadora de várias reuniões científicas</li>
                         </ul>
                         <ul class="text-sociaty">
                         </ul>
