--- a/ejs/lc.ejs
+++ b/ejs/lc.ejs
@@ -34,7 +34,7 @@
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
                             <p><strong>Consultas:</strong> Consulta de Endocrinologia - Consulta de Diabetes - Consulta
-                                multidisciplinar de Cirurgia Bariátrica</p>
+                                Multidisciplinar de Cirurgia Bariátrica</p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
@@ -45,7 +45,7 @@
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Terça-feira:</strong> 11h30-12h00 (Clínica do Porto)</li>
+                        <li><strong>Terça-feira:</strong> 11h30-13h00 (Clínica do Porto)</li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -74,16 +74,19 @@
                             <h4>Sociedades Científicas</h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Assistente Graduada de Endocrinologia desde 2008</li>
-                            <li>Desde 2005 pertence ao Hospital Militar do Porto, agora denominado Hospital das Forças
-                                Armadas - Pólo do Porto.</li>
-                            <li>Assistente Hospitalar de Endocrinologia no Hospital de S. Marcos – Braga até 2005.</li>
-                            <li>Assistente Eventual de Endocrinologia no IPO-Porto no ano 2000.</li>
-                            <li>Internato complementar de Endocrinologia no Hospital de Sto. António até 2000.</li>
+                            <li>Desde 2008 - Assistente Graduada de Endocrinologia.</li>
+                            <li>Desde 2006 - Colaboração na Consulta Multidisciplinar de Diabetes e Patologia da Tiroide
+                                na Gravidez na Clínica Gynébe do Porto</li>
+                            <li>Desde 2005 - Assistente Hospitalar de Endocrinologia no Hospital Militar do Porto, agora
+                                denominado Hospital das Forças Armadas - Pólo do Porto.</li>
+                            <li>2001-2005 - Assistente Hospitalar de Endocrinologia no Hospital de S. Marcos – Braga.
+                            </li>
+                            <li>2000 - Assistente Eventual de Endocrinologia no IPO-Porto.</li>
+                            <li>Até 2000 - Internato complementar de Endocrinologia no Hospital de Sto. António.</li>
                         </ul>
                         <ul class="text-formation">
-                            <li>Licenciatura em Medicina e Cirurgia pela Faculdade de Medicina da Universidade
-                                do Porto em 1991</li>
+                            <li>1991 - Licenciatura em Medicina e Cirurgia pela Faculdade de Medicina da Universidade
+                                do Porto</li>
                         </ul>
                         <ul class="text-science">
                             <li>Participação em diversos cursos de valorização e actualização profissional e reuniões
