--- a/ejs/mca.ejs
+++ b/ejs/mca.ejs
@@ -95,8 +95,8 @@
                             <li>1999 - Licenciatura em Medicina pelo ICBAS - Universidade do Porto</li>
                         </ul>
                         <ul class="text-science">
-                            <li>2004 - Assistente convidada em Obstetrícia, Faculdade de Medicina de Braga</li>
-                            <li>1994-1996 - Assistente convidada de Ginecologia e de Obstetrícia, Instituto de Ciências
+                            <li>2004 - Assistente Convidada de Obstetrícia, Faculdade de Medicina de Braga</li>
+                            <li>1994-1996 - Assistente Convidada de Ginecologia e de Obstetrícia, Instituto de Ciências
                                 Biomédicas Abel Salazar (ICBAS)</li>
                             <li>Publicações em revistas científicas</li>
                             <li>Participações em trabalhos de investigação clinica e elaboração de protocolos</li>
